common-base/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: platform
  template:
    metadata:
      annotations:
        reloader.stakater.com/search: "true"
        configmap.reloader.stakater.com/reload: "platform-cm,deployment-cm,platform-secret-configmap"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/agent-pre-populate-only: "true"
        vault.hashicorp.com/agent-configmap: $(VC_INSTANCE)-platform-secret-configmap
        vault.hashicorp.com/agent-requests-cpu: "25m"
        vault.hashicorp.com/agent-limits-cpu: "50m"    
      labels:
        app: platform
    spec:
      # create database in azure within a sql pool
      containers:
      - name: vc-platform-web      
        image: docker.pkg.github.com/psatheeshkec007/virtocommerceplatformweb:latest
        #image: docker.pkg.github.com/virtocommerce/vc-platform/platform:dev-linux-latest
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/opt/virtocommerce/platform/wwwroot/cms-content"
          name: cms-content-data
        - mountPath: "/opt/virtocommerce/platform/modules"
          name: modules-data         
        - mountPath: /mnt/data
          name: pvcpath
      volumes:
      - name: cms-content-data
        persistentVolumeClaim:
          claimName: cms-content-volume
      - name: modules-data
        persistentVolumeClaim:
          claimName: cms-content-volume
      - name: pvcpath
        hostPath:
          path: /mnt/data
          type: DirectoryOrCreate
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
