common-base/platform-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
  selector:
    app: platform
