common-base/storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
  selector:
    app: storefront
